# game-of-greed-solo

./: pyproject.toml
game_of_greed/: banker.py  game_logic.py
tests/: test_game_of_greed.py
tests/version_1/: test_banker.py  test_calculate_score.py
